--- a/CSS/mediaScreen.css
+++ b/CSS/mediaScreen.css
@@ -2,6 +2,7 @@ body {
     background: linear-gradient(to bottom, blue, purple);
     height: 100vh;
     display: flex;
+    Overflow: hidden
 }
 
 aside {
@@ -21,6 +22,7 @@ aside {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    position: relative;
 }
 .typeButtons button {
     width: 40%;
@@ -47,7 +49,6 @@ main {
     width: 60%;
     border-radius: 50px;
     padding: 20px;
-    overflow-y: auto; 
 
 }
 
@@ -73,3 +74,64 @@ section {
 .userName{
     font-size: 20px;
 }
+
+.media{
+    margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    overflow-y: auto; 
+    height: 90vh;
+
+}
+.mediaWatch{
+    border-radius: 40px;
+    background-image: url("/img/uguStars.jpg");
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 40vh;
+    margin-bottom: 50px; 
+    transition: opacity 0.3s ease;
+}
+
+.mediaWatch:hover {
+    opacity: 0.7;
+}
+
+.mediaWatch img{
+    border-radius: 40px;
+    width: 100%;
+    height: 30vh;
+}
+
+.mediaWatch span{
+    color:white;
+    margin-top: 10px;
+    font-size: 20px;
+    font-family: 'Indie Flower', cursive;
+    text-align: center;
+}
+::-webkit-scrollbar {
+    background-color: #000;
+    width: 12px;
+    border-radius: 10px;
+}
+  
+  /* Track */
+::-webkit-scrollbar-track {
+    border-radius: 10px;
+    box-shadow: inset 0 0 6px rgba(255, 255, 255, 0.3);
+}
+  
+  /* Handle */
+::-webkit-scrollbar-thumb {
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(.5, #a520ca), color-stop(1, #2681cc));
+    border-radius: 10px;
+}
+  
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+  
