--- a/CSS/mediaScreen.css
+++ b/CSS/mediaScreen.css
@@ -86,7 +86,7 @@ section {
 }
 .mediaWatch{
     border-radius: 40px;
-    background-image: url("./img/uguStars.jpg");
+    background-image: url("/img/uguStars.jpg");
     width: 100%;
     display: flex;
     flex-direction: column;
