--- a/CSS/mediaScreen.css
+++ b/CSS/mediaScreen.css
@@ -80,6 +80,7 @@ section {
 
 .media{
     margin-top: 30px;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -88,14 +89,49 @@ section {
 
 }
 .mediaWatch{
-    border-radius: 40px;
-    background-image: url("/img/uguStars.jpg");
-    width: 100%;
+    position: relative;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 40px;
+    background-image: url("/img/uguStars.jpg");
+    width: 30%;
+    display: flex;
     height: 40vh;
     margin-bottom: 50px; 
     transition: opacity 0.3s ease;
+}
+.like-button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 100px;
+    background-color: transparent;
+    border: none;
+    transition: transform 0.2s, color 0.2s;
+}
+
+.like-button:hover {
+    transform: translate(-50%, -50%) scale(1.1);
+}
+
+.like-button.liked {
+    color: red;
+    transform: translate(-50%, -50%) scale(1.2);
+}
+
+.like-button.liked:before {
+    content: '\2764';
+    animation: likeAnimation 0.5s;
+}
+
+@keyframes likeAnimation {
+    0% { opacity: 1; transform: translate(-50%, -50%) scale(1); }
+    50% { opacity: 1; transform: translate(-50%, -50%) scale(1.5); }
+    100% { opacity: 0; transform: translate(-50%, -50%) scale(1.2); }
 }
 
 .mediaWatch:hover {
@@ -109,12 +145,33 @@ section {
 }
 
 .mediaWatch span{
+    
     color:white;
     margin-top: 10px;
     font-size: 20px;
     font-family: 'Indie Flower', cursive;
     text-align: center;
 }
+
+.favourite-movies{
+    position: absolute;
+    bottom: 0;
+    margin-bottom: 100px;
+    color: white;
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
+}
+
+
+#likes-container{
+    height: 20vh;
+    overflow-y: auto;
+
+}
+#likes-container li{
+    margin-top: 10px;
+}
+
 ::-webkit-scrollbar {
     background-color: #000;
     width: 12px;
@@ -137,4 +194,5 @@ section {
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
-  
+
+
